kubernetes/apps/downloads/sabnzbd/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sabnzbd"
    gethomepage.dev/description: "Usenet downloader"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sabnzbd"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "sabnzbd.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
